--- a/about.html
+++ b/about.html
@@ -36,94 +36,59 @@
     </header>
 
     <main class="about-page">
-        <section class="page-header">
-            <h1 data-en="About Fresh Fruits" data-bn="তাজা ফলের দোকান সম্পর্কে">About Fresh Fruits</h1>
-            <p data-en="Bringing nature's best directly to you" data-bn="প্রকৃতির সেরা স্বাদ সরাসরি আপনার কাছে">Bringing nature's best directly to you</p>
+        <section class="about-section">
+            <h2 data-en="Our Story" data-bn="আমাদের গল্প">Our Story</h2>
+            <p data-en="Welcome to Fresh Fruits, your trusted source for the finest quality fruits. Our journey began with a simple mission: to provide fresh, delicious, and healthy fruits to our community." data-bn="তাজা ফলের দোকানে আপনাকে স্বাগতম, যেখানে আপনি পাবেন সর্বোচ্চ মানের ফল। আমাদের যাত্রা শুরু হয়েছিল একটি সহজ লক্ষ্য নিয়ে: আমাদের সম্প্রদায়কে তাজা, সুস্বাদু এবং স্বাস্থ্যকর ফল সরবরাহ করা।">Welcome to Fresh Fruits, your trusted source for the finest quality fruits. Our journey began with a simple mission: to provide fresh, delicious, and healthy fruits to our community.</p>
+            <p data-en="We work directly with local farmers and trusted suppliers to ensure that every fruit we offer meets our high standards of quality and freshness." data-bn="আমরা স্থানীয় কৃষক এবং বিশ্বস্ত সরবরাহকারীদের সাথে সরাসরি কাজ করি যাতে আমরা যে ফল সরবরাহ করি তা আমাদের উচ্চ মান এবং তাজাত্বের মানদণ্ড পূরণ করে।">We work directly with local farmers and trusted suppliers to ensure that every fruit we offer meets our high standards of quality and freshness.</p>
         </section>
 
-        <section class="our-story">
-            <div class="story-content">
-                <h2 data-en="Our Story" data-bn="আমাদের গল্প">Our Story</h2>
-                <p data-en="Founded in 2020, Fresh Fruits began with a simple mission: to provide our community with the freshest, highest-quality fruits while supporting local farmers. What started as a small family-run stand has grown into a beloved neighborhood destination for fresh, seasonal produce." 
-                   data-bn="২০২০ সালে প্রতিষ্ঠিত, তাজা ফল একটি সহজ লক্ষ্য নিয়ে শুরু হয়েছিল: স্থানীয় কৃষকদের সমর্থন করার পাশাপাশি আমাদের সম্প্রদায়কে সবচেয়ে তাজা, সর্বোচ্চ মানের ফল সরবরাহ করা। একটি ছোট পারিবারিক স্টল থেকে শুরু করে এটি এখন তাজা, মৌসুমি পণ্যের জন্য একটি প্রিয় স্থানীয় গন্তব্যে পরিণত হয়েছে।">
-                    Founded in 2020, Fresh Fruits began with a simple mission: to provide our community with the freshest, highest-quality fruits while supporting local farmers. What started as a small family-run stand has grown into a beloved neighborhood destination for fresh, seasonal produce.
-                </p>
-                
-                <h2 data-en="Our Mission" data-bn="আমাদের লক্ষ্য">Our Mission</h2>
-                <p data-en="We believe everyone deserves access to fresh, nutritious fruits. Our mission is to bridge the gap between local farmers and our community, ensuring that you receive the freshest produce while supporting sustainable farming practices." 
-                   data-bn="আমরা বিশ্বাস করি যে প্রত্যেকেরই তাজা, পুষ্টিকর ফলের অ্যাক্সেস পাওয়া উচিত। আমাদের লক্ষ্য হল স্থানীয় কৃষক এবং আমাদের সম্প্রদায়ের মধ্যে ব্যবধান কমিয়ে আনা, যাতে আপনি টেকসই কৃষি অনুশীলনকে সমর্থন করার পাশাপাশি সবচেয়ে তাজা পণ্য পেতে পারেন।">
-                    We believe everyone deserves access to fresh, nutritious fruits. Our mission is to bridge the gap between local farmers and our community, ensuring that you receive the freshest produce while supporting sustainable farming practices.
-                </p>
-            </div>
-        </section>
-
-        <section class="values">
+        <section class="values-section">
             <h2 data-en="Our Values" data-bn="আমাদের মূল্যবোধ">Our Values</h2>
             <div class="values-grid">
                 <div class="value-card">
                     <i class="fas fa-leaf"></i>
-                    <h3 data-en="Freshness" data-bn="তাজাত্ব">Freshness</h3>
-                    <p data-en="We source our fruits daily from local farms and orchards to ensure peak freshness and flavor." 
-                       data-bn="আমরা সর্বোচ্চ তাজাত্ব এবং স্বাদ নিশ্চিত করতে প্রতিদিন স্থানীয় খামার এবং বাগান থেকে ফল সংগ্রহ করি।">
-                        We source our fruits daily from local farms and orchards to ensure peak freshness and flavor.
-                    </p>
+                    <h3 data-en="Quality" data-bn="মান">Quality</h3>
+                    <p data-en="We are committed to providing only the highest quality fruits, carefully selected and handled with care." data-bn="আমরা শুধুমাত্র সর্বোচ্চ মানের ফল সরবরাহ করতে প্রতিশ্রুতিবদ্ধ, যেগুলি সাবধানে নির্বাচিত এবং যত্ন সহকারে পরিচালিত।">We are committed to providing only the highest quality fruits, carefully selected and handled with care.</p>
+                </div>
+                <div class="value-card">
+                    <i class="fas fa-heart"></i>
+                    <h3 data-en="Sustainability" data-bn="টেকসইতা">Sustainability</h3>
+                    <p data-en="We support sustainable farming practices and work with farmers who share our commitment to environmental responsibility." data-bn="আমরা টেকসই কৃষি অনুশীলনকে সমর্থন করি এবং পরিবেশগত দায়িত্বের প্রতি আমাদের প্রতিশ্রুতির সাথে একমত এমন কৃষকদের সাথে কাজ করি।">We support sustainable farming practices and work with farmers who share our commitment to environmental responsibility.</p>
                 </div>
                 <div class="value-card">
                     <i class="fas fa-handshake"></i>
                     <h3 data-en="Community" data-bn="সম্প্রদায়">Community</h3>
-                    <p data-en="Supporting local farmers and building strong relationships within our community is at our core." 
-                       data-bn="স্থানীয় কৃষকদের সমর্থন করা এবং আমাদের সম্প্রদায়ের মধ্যে শক্তিশালী সম্পর্ক গড়ে তোলা আমাদের মূল লক্ষ্য।">
-                        Supporting local farmers and building strong relationships within our community is at our core.
-                    </p>
-                </div>
-                <div class="value-card">
-                    <i class="fas fa-seedling"></i>
-                    <h3 data-en="Sustainability" data-bn="টেকসইতা">Sustainability</h3>
-                    <p data-en="We prioritize environmentally conscious farming practices and minimal packaging waste." 
-                       data-bn="আমরা পরিবেশ-সচেতন কৃষি অনুশীলন এবং ন্যূনতম প্যাকেজিং বর্জ্যকে অগ্রাধিকার দিই।">
-                        We prioritize environmentally conscious farming practices and minimal packaging waste.
-                    </p>
-                </div>
-                <div class="value-card">
-                    <i class="fas fa-heart"></i>
-                    <h3 data-en="Quality" data-bn="মান">Quality</h3>
-                    <p data-en="Every piece of fruit is hand-selected to meet our high standards of quality and taste." 
-                       data-bn="আমাদের উচ্চ মান এবং স্বাদের মানদণ্ড পূরণ করতে প্রতিটি ফল হাতে বেছে নেওয়া হয়।">
-                        Every piece of fruit is hand-selected to meet our high standards of quality and taste.
-                    </p>
+                    <p data-en="We believe in building strong relationships with our customers, suppliers, and the local community." data-bn="আমরা আমাদের গ্রাহক, সরবরাহকারী এবং স্থানীয় সম্প্রদায়ের সাথে শক্তিশালী সম্পর্ক গড়ে তোলায় বিশ্বাস করি।">We believe in building strong relationships with our customers, suppliers, and the local community.</p>
                 </div>
             </div>
         </section>
 
-        <section class="team">
+        <section class="team-section">
             <h2 data-en="Our Team" data-bn="আমাদের দল">Our Team</h2>
             <div class="team-grid">
                 <div class="team-member">
                     <img src="assets/images/placeholder.jpg" alt="Team Member">
-                    <h3>John Smith</h3>
-                    <p class="role" data-en="Founder & CEO" data-bn="প্রতিষ্ঠাতা এবং সিইও">Founder & CEO</p>
-                    <p data-en="With over 20 years of experience in fresh produce." 
-                       data-bn="তাজা পণ্যে ২০ বছরেরও বেশি অভিজ্ঞতা সহ।">
-                        With over 20 years of experience in fresh produce.
-                    </p>
+                    <div class="info">
+                        <h3 data-en="John Doe" data-bn="জন ডো">John Doe</h3>
+                        <p class="role" data-en="Founder & CEO" data-bn="প্রতিষ্ঠাতা এবং সিইও">Founder & CEO</p>
+                        <p data-en="Passionate about bringing the best fruits to our community." data-bn="আমাদের সম্প্রদায়ের জন্য সর্বোত্তম ফল আনার জন্য উত্সাহী।">Passionate about bringing the best fruits to our community.</p>
+                    </div>
                 </div>
                 <div class="team-member">
                     <img src="assets/images/placeholder.jpg" alt="Team Member">
-                    <h3>Sarah Johnson</h3>
-                    <p class="role" data-en="Quality Manager" data-bn="মান ব্যবস্থাপক">Quality Manager</p>
-                    <p data-en="Ensures only the best fruits make it to our shelves." 
-                       data-bn="নিশ্চিত করে যে শুধুমাত্র সেরা ফল আমাদের শেলফে পৌঁছায়।">
-                        Ensures only the best fruits make it to our shelves.
-                    </p>
+                    <div class="info">
+                        <h3 data-en="Jane Smith" data-bn="জেন স্মিথ">Jane Smith</h3>
+                        <p class="role" data-en="Quality Manager" data-bn="মান ব্যবস্থাপক">Quality Manager</p>
+                        <p data-en="Ensuring the highest standards in every fruit we offer." data-bn="আমরা যে ফল সরবরাহ করি তার সর্বোচ্চ মান নিশ্চিত করা।">Ensuring the highest standards in every fruit we offer.</p>
+                    </div>
                 </div>
                 <div class="team-member">
                     <img src="assets/images/placeholder.jpg" alt="Team Member">
-                    <h3>Mike Wilson</h3>
-                    <p class="role" data-en="Sourcing Specialist" data-bn="সোর্সিং বিশেষজ্ঞ">Sourcing Specialist</p>
-                    <p data-en="Works directly with local farmers to source the freshest produce." 
-                       data-bn="সবচেয়ে তাজা পণ্য সংগ্রহ করতে স্থানীয় কৃষকদের সাথে সরাসরি কাজ করে।">
-                        Works directly with local farmers to source the freshest produce.
-                    </p>
+                    <div class="info">
+                        <h3 data-en="Mike Johnson" data-bn="মাইক জনসন">Mike Johnson</h3>
+                        <p class="role" data-en="Supply Chain Manager" data-bn="সরবরাহ শৃঙ্খল ব্যবস্থাপক">Supply Chain Manager</p>
+                        <p data-en="Building strong relationships with our trusted suppliers." data-bn="আমাদের বিশ্বস্ত সরবরাহকারীদের সাথে শক্তিশালী সম্পর্ক গড়ে তোলা।">Building strong relationships with our trusted suppliers.</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -151,8 +116,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p data-en="© 2024 Fresh Fruits. All rights reserved." 
-               data-bn="© ২০২৪ তাজা ফল। সর্বস্বত্ব সংরক্ষিত।">© 2024 Fresh Fruits. All rights reserved.</p>
+            <p data-en="© 2024 Fresh Fruits. All rights reserved." data-bn="© ২০২৪ তাজা ফল। সর্বস্বত্ব সংরক্ষিত।">© 2024 Fresh Fruits. All rights reserved.</p>
         </div>
     </footer>
 
